<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">简单游</string>
    <string name="search_hint_left">起点</string>
    <string name="search_hint_right">终点</string>
    <string name="btn_route_plan">生成</string>
    <string name="hint_want_going">请输入你想要的景点</string>
    <string name="tv_must_place">必去地点</string>
    <string name="btn_is_recommend">是否推荐已游览景点</string>
    <string name="btn_high_grade">综合评分高</string>
    <string name="btn_play_long">游玩时间长</string>
    <string name="btn_less_pay">旅途花费少</string>
    <string name="btn_sort_distance">游玩路程短</string>
    <string name="btn_path_plan">生成路线计划表</string>
    <string name="btn_confirm_plan">确认路线计划表</string>
    <string name="hint_when">出发</string>
    <string name="tv_choose">优先选择</string>
    <string name="tv_route">行程计划表</string>
    <string name="tv_travel_bus">公交</string>
    <string name="tv_travel_car">自驾</string>
    <string name="tv_travel_bike">骑行</string>
    <string name="tv_attention">关注</string>
    <string name="tv_brief_sessions">简介</string>
    <string name="tv_details_comment">用户评价</string>
    <string name="tv_zan">赞</string>
    <string name="tv_comment">评论</string>
    <string name="tv_all_comment">全部评论</string>
    <string name="edt_hint_account">手机号</string>
    <string name="edt_hint_pwd">密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="tv_forget_pwd">忘记密码?</string>
    <string name="tv_login">登录</string>
    <string name="tv_go_register">没有帐号,去注册>></string>
    <string name="edt_code">验证码</string>
    <string name="btn_get_code">获取验证码</string>
    <string name="btn_register">注册</string>
    <string name="edt_phone_number">手机号</string>
    <string name="menu_my_attention">我的关注</string>
    <string name="tv_menu_temp">°</string>
    <string name="tv_menu_setting">设置</string>
    <string name="tv_all_route_nervous">紧迫度</string>
    <string name="tv_all_route_sum_path">总路程</string>
    <string name="tv_all_route_sum_time">总时间</string>
    <string name="tv_all_route_sum_pay">总花费</string>
    <string name="menu_my_route">我的路线</string>
    <string name="menu_my_share">分享</string>
    <string name="tv_travel_knowledge">旅游小知识</string>
    <string name="tv_settings_advice">意见反馈</string>
    <string name="tv_login_out">退出登录</string>
    <string name="tv_join_us">加入我们</string>
    <string name="tv_help">帮助</string>
    <string name="tv_about">关于</string>
    <string name="tab_historic_route">历史路线</string>
    <string name="tab_collect_route">我的路线</string>
    <string name="tv_my_route_item">路线</string>
    <string name="tv_my_route_pass_by">中转站</string>
    <string name="tv_my_route_long_path">路程</string>
    <string name="tv_my_route_pay">花费</string>
    <string name="tv_my_route_save_time">保存时间</string>
    <string name="tv_menu_personality">个性化</string>
    <string name="tv_portrait">头像</string>
    <string name="tv_change_info_name">昵称</string>
    <string name="tv_change_info_sex">性别</string>
    <string name="tv_change_info_city">区域</string>
    <string name="tv_change_info_signed">宣言</string>
    <string name="tv_change_info_email">邮箱</string>
    <string name="rb_sex_man">男</string>
    <string name="rb_sex_sex">保密</string>
    <string name="rb_sex_woman">女</string>
    <string name="tv_advice_submit">提交</string>
    <string name="edt_hint_advice_contact">留下你的联系方式</string>
    <string name="tv_advice_contact">联系方式</string>
    <string name="edt_hint_advice">你的建议</string>
    <string name="tv_login_third">—————— 第三方登录 ————————</string>
    <string name="tv_registered">已注册过，</string>
    <string name="tv_register_login">登录</string>
    <string name="tv_personality_toolbar_title">个性化推荐设置</string>
    <string name="tv_personality_toolbar_next">跳过</string>
    <string name="btn_personality">确定</string>
    <string name="rb_personality56">其他</string>
    <string name="rb_personality55">步行</string>
    <string name="rb_personality54">地铁</string>
    <string name="rb_personality53">公交</string>
    <string name="rb_personality52">骑行</string>
    <string name="rb_personality51">自驾</string>
    <string name="tv_personality5">5.我最喜欢得出行方式？</string>
    <string name="tv_personality1">1.你游玩时一般有多少人？</string>
    <string name="rb_personality11">我是独行侠</string>
    <string name="rb_personality12">和男/女朋友</string>
    <string name="rb_personality13">一群朋友</string>
    <string name="rb_personality14">其他</string>
    <string name="tv_personality2">2.您的年龄？</string>
    <string name="rb_personality21">20岁以下</string>
    <string name="rb_personality22">20-30</string>
    <string name="rb_personality23">30-40</string>
    <string name="rb_personality24">其它</string>
    <string name="tv_personality3">3.我一般喜欢去</string>
    <string name="cb_personality31">自然景观</string>
    <string name="cb_personality32">人文景观</string>
    <string name="cb_personality33">民族风情</string>
    <string name="cb_personality34">传统饮食</string>
    <string name="cb_personality35">安静舒适</string>
    <string name="cb_personality36">热闹繁华</string>
    <string name="tv_personality4">4.游玩的地方我最关心的？</string>
    <string name="rb_personality41">花费合理</string>
    <string name="rb_personality42">人气旺</string>
    <string name="rb_personality43">距离较近</string>
    <string name="rb_personality44">可玩度高</string>
    <string name="hint_over">结束</string>
    <string name="tv_choose_open_exercise">打开经验推荐</string>
    <string name="tv_play_members">游玩成员:</string>
    <string name="tv_how_old">年龄：</string>
    <string name="tv_recommend_way">路线推荐方式:</string>
    <string name="tv_traffic_way">常用出行方式:</string>
    <string name="tv_i_like">我喜欢去:</string>
    <string name="tv_scenic">景区特色</string>
    <string name="tv_around_traffic">周边交通</string>
    <string name="tv_all_service">综合服务</string>
    <string name="tv_historic">历史底蕴</string>
    <string name="tv_play">可玩度</string>
    <string name="tv_confirm_submit">确认提交信息</string>
    <string name="tv_walk_time">预计步行时间：</string>
    <string name="tv_distance">距您：</string>
    <string name="tv_where_you_want">你都喜欢去些什么地方呢…</string>
    <string name="tv_register">注册</string>
    <string name="tv_choose_hint">目前只提供重庆范围内的旅游服务</string>
</resources>
