<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_personality1"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry">

                <RadioButton
                    android:id="@+id/rb_personality11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality11" />

                <RadioButton
                    android:id="@+id/rb_personality12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality12" />

                <RadioButton
                    android:id="@+id/rb_personality13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality13" />

                <RadioButton
                    android:id="@+id/rb_personality14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality14" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_personality2"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry">

                <RadioButton
                    android:id="@+id/rb_personality21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality21" />

                <RadioButton
                    android:id="@+id/rb_personality22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality22" />

                <RadioButton
                    android:id="@+id/rb_personality23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality23" />

                <RadioButton
                    android:id="@+id/rb_personality24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality24" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_personality3"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbox_personality31"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_personality31" />

                <CheckBox
                    android:id="@+id/cbox_personality32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_personality32" />

                <CheckBox
                    android:id="@+id/cbox_personality33"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_personality33" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbox_personality34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_personality34" />

                <CheckBox
                    android:id="@+id/cbox_personality35"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_personality35" />

                <CheckBox
                    android:id="@+id/cbox_personality36"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_personality36" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_personality4"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry">

                <RadioButton
                    android:id="@+id/rb_personality41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality41" />

                <RadioButton
                    android:id="@+id/rb_personality42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality42" />

                <RadioButton
                    android:id="@+id/rb_personality43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality43" />

                <RadioButton
                    android:id="@+id/rb_personality44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality44" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_personality5"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry">

                <RadioButton
                    android:id="@+id/rb_personality51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality51" />

                <RadioButton
                    android:id="@+id/rb_personality52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality52" />

                <RadioButton
                    android:id="@+id/rb_personality53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality53" />

                <RadioButton
                    android:id="@+id/rb_personality54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality54" />

                <RadioButton
                    android:id="@+id/rb_personality55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality55" />

                <RadioButton
                    android:id="@+id/rb_personality56"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_personality56" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_personality"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:text="@string/btn_personality" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>