<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_register_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/edt_phone_number"/>

    <EditText
        android:id="@+id/edt_register_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_hint_pwd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/edt_code"/>

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_code"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"/>

</LinearLayout>