<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:id="@+id/layout_advice"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:focusable="true">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/edt_advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/edt_hint_advice"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_advice_contact"/>

        <EditText
            android:id="@+id/edt_advice_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/edt_hint_advice_contact"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_advice_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_advice_submit"
        android:textSize="20sp"
        android:layout_gravity="bottom"/>
</LinearLayout>