<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f9"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/layout_setting_advice"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_settings_advice"
            android:textColor="#414141"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentRight="true"
            android:background="#eeeeee"
            android:layout_marginStart="15dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_about"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_about"
            android:textColor="#414141"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentRight="true"
            android:background="#eeeeee" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_help"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_help"
            android:textColor="#414141"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#eeeeee" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_join_us"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/tv_join_us"
            android:textColor="#414141"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/next" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_setting_login_out"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/tv_login_out"
        android:textColor="#414141"
        android:textSize="18sp" />

</LinearLayout>